[package]
name = "netutils"
version = "0.1.0"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]

[lib]
name = "netutils"
path = "src/lib/lib.rs"

[[bin]]
name = "dhcpd"
path = "src/dhcpd/main.rs"

[[bin]]
name = "dns"
path = "src/dns/main.rs"

# [[bin]]
# name = "httpd"
# path = "src/httpd/main.rs"

[[bin]]
name = "irc"
path = "src/irc/main.rs"

[[bin]]
name = "nc"
path = "src/nc/main.rs"

[[bin]]
name = "ntp"
path = "src/ntp/main.rs"

# [[bin]]
# name = "telnetd"
# path = "src/telnetd/main.rs"

# [[bin]]
# name = "wget"
# path = "src/wget/main.rs"

[[bin]]
name = "whois"
path = "src/whois/main.rs"

[[bin]]
name = "ping"
path = "src/ping/main.rs"

[dependencies]
anyhow = "1"
# hyper-rustls = "0.16.1"
ntpclient = { git = "https://github.com/willem66745/ntpclient-rust" }
redox-daemon = "0.1.2"
redox_event = "0.4"
termion = "4"
arg_parser = { git = "https://gitlab.redox-os.org/redox-os/arg-parser.git" }
pbr = "1.0.1"
redox_termios = "0.1.3"
# mio = "=0.6.14"
net2 = "=0.2.37"
# tokio = { git = "https://gitlab.redox-os.org/redox-os/tokio" }
# tokio-reactor = { git = "https://gitlab.redox-os.org/redox-os/tokio" }
url = "1.7.2"
libredox = "0.1"

# [dependencies.hyper]
# version = "0.12.27"
# default-features = false

[target.'cfg(not(target_os = "redox"))'.dependencies]
libc = "0.2.51"

[patch.crates-io]
# mio = { git = "https://gitlab.redox-os.org/redox-os/mio.git", branch = "redox-unix" }
net2 = { git = "https://gitlab.redox-os.org/redox-os/net2-rs.git", branch = "master" }
